--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -1,10 +1,41 @@
-.gradient-text {
-    background-color: #f3ec78;
-    background-image: linear-gradient(45deg, #000000, #27a107);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
-    transition: background-size 0.3s ease-in-out;
-}
+
+.dropdown {
+    position: relative;
+    flex: inline-block;
+  }
+  
+  .dropbtn {
+    background-color: #333;
+    color: white;
+    padding: 0.5rem;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    border: 2px solid black;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 0.5rem;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .links {
+      display: none;
+    }
+  
+    .dropdown {
+      display: inline-block;
+    }
+  }
